# pdfautocrop

./: CMakeLists.txt  README.md
src/: input.cpp  input.h  main.cpp  optimize.cpp  optimize.h  output.cpp  output.h  settings.cpp  settings.h
